finish ktop show

--- a/top_html/page4.html
+++ b/top_html/page4.html
@@ -1,1 +1,1 @@
-const data = [{"source": "kizk", "target": "qmt", "attr": "c", "rela": "", "elementId": 0}, {"source": "kizk", "target": "az", "attr": "b", "rela": "", "elementId": 1}, {"source": "az", "target": "cd", "attr": "b", "rela": "", "elementId": 2}, {"source": "cd", "target": "cc", "attr": "c", "rela": "", "elementId": 3}];
+const data = [{"source": "English", "target": "computer", "attr": "b", "rela": "", "elementId": 0}, {"source": "computer", "target": "life", "attr": "c", "rela": "", "elementId": 1}];
