--- a/qmt/index.html
+++ b/qmt/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>kizk</title>
+<title>qmt</title>
 <style>
     * {
       margin: 0;
@@ -56,7 +56,7 @@
 </body>
 <script src="./html/d3.min.js"></script>
 <script>
-const data = [{"source": "kizk", "target": "qmt", "attr": "c", "rela": "", "elementId": 0}, {"source": "kizk", "target": "az", "attr": "b", "rela": "", "elementId": 1}, {"source": "az", "target": "cd", "attr": "b", "rela": "", "elementId": 2}, {"source": "cd", "target": "cc", "attr": "c", "rela": "", "elementId": 3}];
+const data = [{"source": "English", "target": "computer", "attr": "b", "rela": "", "elementId": 0}, {"source": "computer", "target": "life", "attr": "c", "rela": "", "elementId": 1}];
 const graph = {
     nodes: [],
     links: [],
